--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="bg-very-dark-blue relative">
-    <main class="h-screen text-[14px] bg-[url('/images/bg-mobile.png')] bg-no-repeat bg-cover flex flex-col justify-center items-center font-['Raleway'] lg:flex-row lg:items-center lg:bg-[url('/images/bg-desktop.png')] lg:bg-bottom lg:bg-auto">
+    <main class="h-screen text-[14px] bg-[url('../images/bg-mobile.png')] bg-no-repeat bg-cover flex flex-col justify-center items-center font-['Raleway'] lg:flex-row lg:items-center lg:bg-[url('../images/bg-desktop.png')] lg:bg-bottom lg:bg-auto">
       <div class="flex flex-col items-center justify-center w-full lg:flex-row">
         <section>
           <div class="bg-dark-blue p-10 pr-32 rounded-lg rounded-tr-[50%] lg:mr-5">
