--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   <footer class="attribution text-white absolute right-0 left-0 bottom-0 lg:p-2.5">
     Challenge by <a class="transition-all ease-in duration-150 border-b border-transparent font-bold hover:border-blue-light lg:hover:border-b lg:hover:border-blue-light lg:hover:text-[15px]" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a class="transition-all ease-in duration-150 border-b border-transparent font-bold hover:border-blue-light lg:hover:border-b lg:hover:border-blue-light lg:hover:text-[15px]" href="#"><i class="fa-brands fa-github ml-1 mr-1"></i>DEV Guilherme</a>.
+    Coded by <a class="transition-all ease-in duration-150 border-b border-transparent font-bold hover:border-blue-light lg:hover:border-b lg:hover:border-blue-light lg:hover:text-[15px]" href="https://github.com/guilhermedev05"><i class="fa-brands fa-github ml-1 mr-1"></i>DEV Guilherme</a>.
   </footer>
 </body>
 </html>
